# envconfig-manager

./: .gitignore  README.md  README.zh-CN.md  REFACTOR.md  feature.md  index.html  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  config.rs  env_var.rs  mod.rs  profile.rs  validation.rs
src-tauri/src/utils/: fs_atomic.rs  mod.rs  platform.rs  shell.rs
src/components/: DiffViewer.vue  ValidationPanel.vue
src/router/: index.ts
src/stores/: backup.ts  config.ts  envVar.ts  profile.ts  theme.ts  validation.ts
src/types/: index.ts
src/views/: BackupManager.vue  ConfigEditor.vue  EnvVariables.vue  ProfileManager.vue  Settings.vue
