[package]
name = "envconfig-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "envconfig_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]
